@@ -23,6 +23,9 @@ http://www.planetquake.com/quark - Contact information in AUTHORS.TXT
 $Header$
  ----------- REVISION HISTORY ------------
 $Log$
+Revision 1.1  2007/02/19 13:32:10  danielpharos
+Moved VTFLib dll interface to a separate file, and build the SaveFile for VTF's using it. SaveFile has not been fully tested yet!
+
 Revision 1.22  2007/02/12 01:06:18  danielpharos
 Fix for a major crash with the external calls to the VTFLib
 
@@ -167,8 +170,133 @@ const	TEXTUREFLAGS_CLAMPU					= $02000000;
 const	TEXTUREFLAGS_LAST						= $02000000;
 const	TEXTUREFLAGS_COUNT					= 26;
 
+{const MIPMAP_FILTER_POINT = 0;
+const MIPMAP_FILTER_BOX = 1;
+const MIPMAP_FILTER_TRIANGLE = 2;
+const MIPMAP_FILTER_QUADRATIC = 3;
+const MIPMAP_FILTER_CUBIC = 4;
+const MIPMAP_FILTER_CATROM = 5;
+const MIPMAP_FILTER_MITCHELL = 6;
+const MIPMAP_FILTER_GAUSSIAN = 7;
+const MIPMAP_FILTER_SINC = 8;
+const MIPMAP_FILTER_BESSEL = 9;
+const MIPMAP_FILTER_HANNING = 10;
+const MIPMAP_FILTER_HAMMING = 11;
+const MIPMAP_FILTER_BLACKMAN = 12;
+const MIPMAP_FILTER_KAISER = 13;
+const MIPMAP_FILTER_COUNT = 14;
+
+typedef enum tagVTFSharpenFilter    ALL THESE typedef'S STILL NEED TO BE CONVERTED!!!
+	SHARPEN_FILTER_NONE = 0,
+	SHARPEN_FILTER_NEGATIVE,
+	SHARPEN_FILTER_LIGHTER,
+	SHARPEN_FILTER_DARKER,
+	SHARPEN_FILTER_CONTRASTMORE,
+	SHARPEN_FILTER_CONTRASTLESS,
+	SHARPEN_FILTER_SMOOTHEN,
+	SHARPEN_FILTER_SHARPENSOFT,
+	SHARPEN_FILTER_SHARPENMEDIUM,
+	SHARPEN_FILTER_SHARPENSTRONG,
+	SHARPEN_FILTER_FINDEDGES,
+	SHARPEN_FILTER_CONTOUR,
+	SHARPEN_FILTER_EDGEDETECT,
+	SHARPEN_FILTER_EDGEDETECTSOFT,
+	SHARPEN_FILTER_EMBOSS,
+	SHARPEN_FILTER_MEANREMOVAL,
+    SHARPEN_FILTER_UNSHARP,
+    SHARPEN_FILTER_XSHARPEN,
+    SHARPEN_FILTER_WARPSHARP,
+	SHARPEN_FILTER_COUNT}
+
+{  typedef enum tagVTFResizeMethod
+    RESIZE_NEAREST_POWER2 = 0,
+    RESIZE_BIGGEST_POWER2,
+    RESIZE_SMALLEST_POWER2,
+    RESIZE_SET,
+	RESIZE_COUNT}
+
+{  typedef enum tagVTFKernelFilter
+	KERNEL_FILTER_4X = 0,
+	KERNEL_FILTER_3X3,
+	KERNEL_FILTER_5X5,
+	KERNEL_FILTER_7X7,
+	KERNEL_FILTER_9X9,
+	KERNEL_FILTER_DUDV,
+	KERNEL_FILTER_COUNT}
+
+{  typedef enum tagVTFHeightConversionMethod
+    HEIGHT_CONVERSION_METHOD_ALPHA = 0,
+    HEIGHT_CONVERSION_METHOD_AVERAGE_RGB,
+    HEIGHT_CONVERSION_METHOD_BIASED_RGB,
+    HEIGHT_CONVERSION_METHOD_RED,
+    HEIGHT_CONVERSION_METHOD_GREEN,
+    HEIGHT_CONVERSION_METHOD_BLUE,
+    HEIGHT_CONVERSION_METHOD_MAX_RGB,
+    HEIGHT_CONVERSION_METHOD_COLORSPACE,
+    //HEIGHT_CONVERSION_METHOD_NORMALIZE,
+	HEIGHT_CONVERSION_METHOD_COUNT }
+
+{  typedef enum tagVTFNormalAlphaResult
+	NORMAL_ALPHA_RESULT_NOCHANGE = 0,
+    NORMAL_ALPHA_RESULT_HEIGHT,
+    NORMAL_ALPHA_RESULT_BLACK,
+    NORMAL_ALPHA_RESULT_WHITE,
+	NORMAL_ALPHA_RESULT_COUNT}
+
 type
   VTFImageFormat = Integer;
+{  VTFMipmapFilter = Integer;
+  VTFSharpenFilter = Integer;
+  VTFResizeMethod = Integer;
+  VTFKernelFilter = Integer;
+  VTFHeightConversionMethod = Integer;
+  VTFNormalAlphaResult = Integer;
+
+  SVTFCreateOptions = record
+  	uiVersion : array[0..2] of Cardinal;								//!< Output image version.
+	  ImageFormat : VTFImageFormat;							//!< Output image output storage format.
+
+  	uiFlags : Cardinal;										//!< Output image header flags.
+  	uiStartFrame : Cardinal;								//!< Output image start frame.
+  	sBumpScale : Single;								//!< Output image bump scale.
+  	sReflectivity : array[0..3] of Single;							//!< Output image reflectivity. (Only used if bReflectivity is false.)
+
+  	bMipmaps : Boolean;									//!< Generate MIPmaps. (Space is always allocated.)
+  	MipmapFilter : VTFMipmapFilter;						//!< MIP map re-size filter.
+  	MipmapSharpenFilter : VTFSharpenFilter;				//!< MIP map sharpen filter.
+
+	  bThumbnail : Boolean;									//!< Generate thumbnail image.
+  	bReflectivity : Boolean;								//!< Compute image reflectivity.
+
+  	bResize : Boolean;										//!< Resize the input image.
+  	ResizeMethod : VTFResizeMethod;						//!< New size compution method.
+  	ResizeFilter : VTFMipmapFilter;						//!< Re-size filter.
+  	ResizeSharpenFilter : VTFSharpenFilter;				//!< Sharpen filter.
+  	uiResizeWidth : Cardinal;								//!< New width after re-size if method is RESIZE_SET.
+  	uiResizeHeight : Cardinal;								//!< New height after re-size if method is RESIZE_SET.
+
+  	bResizeClamp : Boolean;								//!< Clamp re-size size.
+  	uiResizeClampWidth : Cardinal;							//!< Maximum width to re-size to.
+  	uiResizeClampHeight : Cardinal;							//!< Maximum height to re-size to.
+
+  	bGammaCorrection : Boolean;							//!< Gamma correct input image.
+  	sGammaCorrection : Single;							//!< Gamma correction to apply.
+
+  	bNormalMap : Boolean;									//!< Convert input image to a normal map.
+  	KernelFilter : VTFKernelFilter;						//!< Normal map generation kernel.
+  	HeightConversionMethod : VTFHeightConversionMethod;	//!< Method or determining height from input image during normal map creation.
+  	NormalAlphaResult : VTFNormalAlphaResult;				//!< How to handle output image alpha channel, post normal map creation.
+  	bNormalMinimumZ : Byte;								//!< Minimum normal Z value.
+  	sNormalScale : Single;								//!< Normal map scale.
+	  bNormalWrap : Boolean;									//!< Wrap the normal map.
+  	bNormalInvertX : Boolean;								//!< Invert the normal X component.
+  	bNormalInvertY : Boolean;								//!< Invert the normal Y component.
+  	bNormalInvertZ : Boolean;								//!< Invert the normal Z component.
+
+  	bSphereMap : Boolean;									//!< Generate a sphere map for six faced environment maps.
+  end;
+
+  PSVTFCreateOptions = ^SVTFCreateOptions; }
 
 var
   vlGetVersion: function : Cardinal; cdecl;
@@ -178,8 +306,8 @@ var
   vlBindImage: function (uiImage : Cardinal) : Boolean; cdecl;
   vlDeleteImage: procedure (uiImage : Cardinal); cdecl;
   vlImageLoad: function (const cFileName : string; bHeaderOnly : Boolean) : Boolean; cdecl;
-  vlImageLoadLump: function (const lpData : PByte; uiBufferSize : Cardinal; bHeaderOnly : Boolean) : Boolean; cdecl;
-  vlImageSaveLump: function (const lpData : PByte; uiBufferSize : Cardinal; uiSize : PCardinal) : Boolean;
+  vlImageLoadLump: function (lpData : PByte; uiBufferSize : Cardinal; bHeaderOnly : Boolean) : Boolean; cdecl;
+  vlImageSaveLump: function (lpData : PByte; uiBufferSize : Cardinal; uiSize : PCardinal) : Boolean; cdecl;
   vlImageGetFlags: function : Cardinal; cdecl;
   vlImageGetFormat: function : VTFImageFormat; cdecl;
   vlImageGetWidth: function : Cardinal; cdecl;
@@ -187,6 +315,10 @@ var
   vlImageConvert: function (lpSource : PByte; lpDest : PByte; uiWidth : Cardinal; uiHeight : Cardinal; SourceFormat : VTFImageFormat; DestFormat : VTFImageFormat) : Boolean; cdecl;
   vlImageComputeImageSize: function (uiWidth : Cardinal; uiHeight : Cardinal; uiDepth : Cardinal; uiMipmaps : Cardinal; ImageFormat : VTFImageFormat) : Cardinal; cdecl;
   vlImageGetData: function (uiFrame : Cardinal; uiFace : Cardinal; uiSlice : Cardinal; uiMipmapLevel : Cardinal) : PByte; cdecl;
+  vlImageSetData: procedure (uiFrame : Cardinal; uiFace : Cardinal; uiSlice : Cardinal; uiMipmapLevel : Cardinal; lpData : PByte); cdecl;
+  vlImageCreate: function (uiWidth : Cardinal; uiHeight : Cardinal; uiFrames : Cardinal; uiFaces : Cardinal; uiSlices : Cardinal; ImageFormat :VTFImageFormat; bThumbnail : Boolean; bMipmaps: Boolean; bNullImageData : Boolean) : Boolean; cdecl;
+{  vlImageCreateSingle: function (uiWidth : Cardinal; uiHeight : Cardinal; lpImageDataRGBA8888 : PByte; VTFCreateOptions : PSVTFCreateOptions) : Boolean; cdecl;
+  vlImageCreateDefaultCreateStructure: procedure (VTFCreateOptions : PSVTFCreateOptions); cdecl;}
 
 implementation
 
@@ -262,6 +394,10 @@ begin
       vlImageConvert    := InitDllPointer(HVTFLib, 'vlImageConvert');
       vlImageComputeImageSize    := InitDllPointer(HVTFLib, 'vlImageComputeImageSize');
       vlImageGetData    := InitDllPointer(HVTFLib, 'vlImageGetData');
+      vlImageSetData    := InitDllPointer(HVTFLib, 'vlImageSetData');
+      vlImageCreate     := InitDllPointer(HVTFLib, 'vlImageCreate');
+{      vlImageCreateSingle        := InitDllPointer(HVTFLib, 'vlImageCreateSingle');
+      vlImageCreateDefaultCreateStructure      := InitDllPointer(HVTFLib, 'vlImageCreateDefaultCreateStructure');}
 
       if vlGetVersion<124 then
         Fatal('VTFLib version mismatch!');
@@ -304,6 +440,10 @@ begin
     vlImageConvert    := nil;
     vlImageComputeImageSize    := nil;
     vlImageGetData    := nil;
+    vlImageSetData    := nil;
+    vlImageCreate     := nil;
+{    vlImageCreateSingle        := nil;
+    vlImageCreateDefaultCreateStructure      := nil;}
   end;
 
   if Hvstdlib <> 0 then
